# src/controller/authController.ts
@@ -1,6 +1,6 @@
 import { Controller, Route, Post, Body, Request, Security } from "tsoa";
 import { AuthInput } from "../model/authInput";
-import { authenticate, refreshUsersToken } from "../auth/jwt";
+import { authenticate, refreshUsersToken, logOutUser } from "../auth/jwt";
 
 @Route("auth")
 export class AuthController extends Controller {
@@ -19,10 +19,10 @@ export class AuthController extends Controller {
   }
 
   @Post("refreshTokens")
-  public async refreshTokens(@Body() refreshToken: string) {
+  public async refreshTokens(@Body() data: {refreshtoken: string}) {
     let tokens;
     try {
-      tokens = await refreshUsersToken(refreshToken);
+      tokens = await refreshUsersToken(data.refreshtoken);
     } catch (err) {
       // TODO: Handle err
       throw err;
@@ -32,9 +32,8 @@ export class AuthController extends Controller {
 
   @Security("jwt")
   @Post("logout")
-  public async logout(@Request() request: any) {
+  public async logout(@Request() request: any, @Body() data: {refreshtoken: string}) {
     let userId = request.user.id
-    console.log(request, request.user)
-
+    await logOutUser(userId, data.refreshtoken);
   }
 }
